src/test/ui/issues/issue-40782.rs
// run-rustfix

fn main() {
    for _i 0..2 { //~ ERROR missing `in`
    }
}
